// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generics: should compile class with type params 1`] = `
"[partial: breadcrumbs]

# Class: ClassWithTypeParams<T, V\\\\>

[partial: comment]

## Type parameters

| Name |
| :------ |
| \`T\` || \`V\` |

## Table of contents


### Constructors


- [constructor](ClassWithTypeParams.md#constructor)


### Properties


- [propT](ClassWithTypeParams.md#propt)
- [propV](ClassWithTypeParams.md#propv)



[partial: members]"
`;

exports[`Generics: should compile function with a simple type param' 1`] = `
"**functionWithTypeParam**<\`A\`\\\\>(): \`boolean\`

#### Type parameters

| Name |
| :------ |
| \`A\` |

#### Returns

\`boolean\`

[partial: sources]"
`;

exports[`Generics: should compile function with complex type params' 1`] = `
"**functionWithTypeParams**<\`A\`, \`B\`, \`C\`\\\\>(): \`boolean\`

[partial: comment]

#### Type parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| \`A\` | extends [\`ClassWithTypeParams\`](ClassWithTypeParams.md)<\`string\`, \`number\`, \`A\`\\\\> | [partial: comment] || \`B\` | \`string\` \\\\| \`boolean\` | [partial: comment] || \`C\` | \`string\` | - |

#### Returns

\`boolean\`

[partial: sources]"
`;

exports[`Generics: should compile generics with defaults' 1`] = `
" **genericsWithDefaults**: 

[partial: sources]"
`;

exports[`Generics: should compile type with nested generics' 1`] = `
" **nestedGenerics**: [\`Generic1\`](../modules.md#generic1)<[\`Generic2\`](../modules.md#generic2)<[\`Generic3\`](../modules.md#generic3)<\`string\`\\\\>\\\\>\\\\>

[partial: sources]"
`;
